fix: gap between cards

--- a/css/pages/home/home.css
+++ b/css/pages/home/home.css
@@ -8,7 +8,7 @@
 }
 
 .main-language-descrip{
-    padding: 0 0 50px 0;
+    padding: 0 0 100px 0;
 }
 
 .main-front-title {
@@ -32,14 +32,18 @@
 .card-container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    width: 90%;
+    justify-content: space-between;
+}
+
+.card-main{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 .card {
     height: 300px;
     width: 400px;
-    margin: 3rem 0 0 0;
     background: linear-gradient(90deg, rgba(8,0,255,1) 0%, rgba(0,245,255,1) 100%);
     display: flex;
     justify-content: center;
@@ -51,7 +55,7 @@
 }
 
 .card-text {
-    width: 40%;
+    width: 50%;
     font-family: sans-serif;
     letter-spacing: 1px;
     color: white;
